objects/tqay_Question_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <referenceTo>tqay_Answer__c</referenceTo>
        <relationshipLabel>Question Answer</relationshipLabel>
        <relationshipName>Question_Answer</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Correct_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>tqay_Question__c</referenceTo>
        <relationshipLabel>Question Answer</relationshipLabel>
        <relationshipName>Question_Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Answer</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Question Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>